# xbmc-pvr-tests

./: .gitignore  .gitmodules  .valgrind.supp  .valgrindrc  Makefile.am  README  bootstrap  configure.ac  coverage.sh
addons/: Makefile.am
addons/pvr.mythtv.cmyth/: Makefile.am
addons/pvr.mythtv.cmyth/test/: main.cpp  mythtvfixture.cpp  mythtvfixture.h  test_mythtv_channels.cpp  test_mythtv_connection.cpp  test_mythtv_livetv.cpp  test_mythtv_profile.cpp  test_mythtv_recordings.cpp  test_mythtv_timers.cpp  transferutils.h
lib/: Makefile.am
mock/: libXBMC_addon.h  libXBMC_gui.h  libXBMC_pvr.h
